# Plc_reader_CPP

./: .gitignore  CMakeLists.txt  TEST.py  classes.hpp  classes_utils.hpp  compile.bat  compile.sh  datatype.hpp  from_pylib.hpp  gui.hpp  gui_utils.hpp  imgui.ini  include_map - draw.io.html  include_map.drawio  log.txt  main.cpp  managers.hpp  nul  opc_connection.hpp  parser.hpp  parser_actions.hpp  readme.txt
.external/glad/include/glad/: gl.h
.external/glad/src/: gl.c
DWITH_TAO/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: action.hpp  classes.hpp  datatype.hpp  gui.hpp  hw_interface.hpp  managers.hpp  parser.hpp  profi_DCP.hpp
include_map - draw.io_files/: api.js.download  cb=gapi.loaded_0
instances/DBs/: TAG[1551].db
lib/: bpf.h  pcap.h  snap7.def  snap7.lib
opc_ua/: opc_funcionality.hpp  opc_models.hpp  opc_models_utils.hpp  open62541.h
py_lib/: data_type.py  db_parser.py  gui_data_type.py  pylib.py  settings.json
root/Benteler/: GA1_S1_Syn Gui DB.db  GA1_S1_TAGW DB.db  Order_SFS To StatA DB[240].db  SYN_CFG.db  Syn Dyn.db
src/: TEST.py  classes.cpp  function.cpp  gui.cpp  hw_interface.cpp  managers.cpp  parser.cpp  profi_DCP.cpp
